# pollify

./: .gitignore  LICENSE  README.md  docker-compose.swarm.yml  docker-compose.yml  fix-api-urls.sh  start.sh  stop.sh
.github/: WORKFLOWS.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TEST_SUMMARY.md  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: dd20dd3b5f85_create_initial_tables.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  polls.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  comment.py  like.py  polls.py  user.py  vote.py
backend/app/schemas/: auth_schema.py  user_schema.py
backend/app/services/: auth_service.py  poll_service.py
backend/app/tests/: conftest.py  run_tests.py  test_config.py  test_main.py  test_security.py
backend/app/tests/api/v1/: test_auth.py  test_polls.py
backend/app/tests/integration/: test_full_flow.py
backend/app/tests/services/: test_auth_service.py  test_poll_service.py
backend/app/utils/: jwt_utils.py
backend/config/: database.py
backend/models/: comment.py  like.py  polls.py  user.py  vote.py
backend/schemas/: poll_schema.py
backend/scripts/: test.sh
backend/services/: auth_service.py  poll_service.py
backend/tests/: test_api.py  test_summary.py
backend/utils/: dependencies.py
frontend/: .gitignore  README.md  package-lock.json  package.json
local-setup/: dev-setup.sh  (+2 more)
(+65 files in other folders)
